--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -18,9 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3ecdd008",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Import dependencies\n",
@@ -30,9 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "59390c4a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Create an instance of MongoClient\n",
@@ -41,9 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "71e373c1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# assign the uk_food database to a variable name\n",
@@ -52,19 +58,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "18ab463c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['establishments']\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our database\n"
+    "# review the collections in our database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "11c9f11b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# assign the collection to a variable\n",
@@ -93,13 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c2da7648",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Find the establishments with a hygiene score of 20\n",
-    "query =\n",
+    "query = {'scores.Hygiene': 20}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
     "\n",
@@ -158,7 +179,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4e570caf",
    "metadata": {},
@@ -253,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
